--- a/server/package.json
+++ b/server/package.json
@@ -11,11 +11,17 @@
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
+    "decompress-zip": "^0.3.3",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-fileupload": "^1.2.0",
+    "express-formidable": "^1.2.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.11.10",
-    "multer": "^1.4.2"
+    "multer": "^1.4.2",
+    "node-stream-zip": "^1.12.0",
+    "serve-index": "^1.9.1",
+    "unrar-promise": "^2.0.1",
+    "uuid": "^8.3.2"
   }
 }
