--- a/server/package.json
+++ b/server/package.json
@@ -21,6 +21,8 @@
     "multer": "^1.4.2",
     "node-stream-zip": "^1.12.0",
     "serve-index": "^1.9.1",
+    "swagger-jsdoc": "^6.0.1",
+    "swagger-ui-express": "^4.1.6",
     "unrar-promise": "^2.0.1",
     "uuid": "^8.3.2"
   }
